@@ -6,8 +6,6 @@ package com.microsoft.typespec.http.client.generator.core.template;
 import static com.microsoft.typespec.http.client.generator.core.util.ClientModelUtil.JSON_MERGE_PATCH_HELPER_CLASS_NAME;
 import static com.microsoft.typespec.http.client.generator.core.util.ClientModelUtil.includePropertyInConstructor;
 
-import com.azure.core.util.CoreUtils;
-import com.azure.xml.XmlSerializable;
 import com.microsoft.typespec.http.client.generator.core.extension.plugin.JavaSettings;
 import com.microsoft.typespec.http.client.generator.core.implementation.ClientModelPropertiesManager;
 import com.microsoft.typespec.http.client.generator.core.implementation.ClientModelPropertyWithMetadata;
@@ -17,6 +15,8 @@ import com.microsoft.typespec.http.client.generator.core.model.clientmodel.Clien
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.ClientModelProperty;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.ClientModelPropertyAccess;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.ClientModelPropertyReference;
+import com.microsoft.typespec.http.client.generator.core.model.clientmodel.ConvertFromJsonTypeTrait;
+import com.microsoft.typespec.http.client.generator.core.model.clientmodel.ConvertToJsonTypeTrait;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.IType;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.IterableType;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.MapType;
@@ -28,12 +28,13 @@ import com.microsoft.typespec.http.client.generator.core.model.javamodel.JavaIfB
 import com.microsoft.typespec.http.client.generator.core.model.javamodel.JavaJavadocComment;
 import com.microsoft.typespec.http.client.generator.core.model.javamodel.JavaVisibility;
 import com.microsoft.typespec.http.client.generator.core.util.ClientModelUtil;
+import io.clientcore.core.utils.CoreUtils;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Base64;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.LinkedHashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -94,6 +95,9 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
         imports.add(Base64.class.getName());
         imports.add(LinkedHashMap.class.getName());
         imports.add(List.class.getName());
+        imports.add(LinkedList.class.getName());
+        imports.add(Arrays.class.getName());
+        imports.add(Collectors.class.getName());
         imports.add(Map.class.getName());
         imports.add(Objects.class.getName());
     }
@@ -110,7 +114,7 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
         }
 
         String interfaceName = (model.getXmlName() != null)
-            ? XmlSerializable.class.getSimpleName()
+            ? ClassType.XML_SERIALIZABLE.getName()
             : ClassType.JSON_SERIALIZABLE.getName();
 
         return classSignature + " implements " + interfaceName + "<" + model.getName() + ">";
@@ -372,7 +376,7 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
             .writeStreamStyleSerialization(classBlock);
     }
 
-    private static final class StreamSerializationGenerator {
+    protected static class StreamSerializationGenerator {
         private final ClientModelPropertiesManager propertiesManager;
         private final ClientModel model;
         private final JavaSettings settings;
@@ -382,7 +386,7 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
         private final boolean isJsonMergePatchModel;
         private final boolean useFromJsonShared;
 
-        private StreamSerializationGenerator(ClientModelPropertiesManager propertiesManager,
+        protected StreamSerializationGenerator(ClientModelPropertiesManager propertiesManager,
             Predicate<ClientModel> isManagementErrorSubclass) {
             this.propertiesManager = propertiesManager;
             this.model = propertiesManager.getModel();
@@ -394,7 +398,7 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
             this.useFromJsonShared = canUseFromJsonShared(propertiesManager);
         }
 
-        private void writeStreamStyleSerialization(JavaClass classBlock) {
+        public void writeStreamStyleSerialization(JavaClass classBlock) {
             if (model.getXmlName() != null) {
                 writeToXml(classBlock);
                 if (isSuperTypeWithDiscriminator(model)) {
@@ -647,8 +651,8 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
          * terminal location of a flattened structure.
          * @param isJsonMergePatch Whether the serialization is for a JSON Merge Patch model.
          */
-        private static void serializeJsonProperty(JavaBlock methodBlock, ClientModelProperty property,
-            String serializedName, boolean fromSuperType, boolean ignoreFlattening, boolean isJsonMergePatch) {
+        private void serializeJsonProperty(JavaBlock methodBlock, ClientModelProperty property, String serializedName,
+            boolean fromSuperType, boolean ignoreFlattening, boolean isJsonMergePatch) {
             if ((ignoreFlattening && property.getNeedsFlatten()) || property.isAdditionalProperties()) {
                 // Property will be handled later by flattened or additional properties serialization.
                 return;
@@ -697,8 +701,8 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
          * directly.
          * @param isJsonMergePatch Whether the serialization is for a JSON Merge Patch model.
          */
-        private static void serializeJsonProperty(JavaBlock methodBlock, ClientModelProperty property,
-            String serializedName, boolean fromSuperType, boolean isJsonMergePatch) {
+        private void serializeJsonProperty(JavaBlock methodBlock, ClientModelProperty property, String serializedName,
+            boolean fromSuperType, boolean isJsonMergePatch) {
             IType clientType = property.getClientType();
             IType wireType = property.getWireType();
             String propertyValueGetter = getPropertyGetterStatement(property, fromSuperType);
@@ -726,15 +730,8 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
                     methodBlock.line("JsonMergePatchHelper.get" + clientType.toString()
                         + "Accessor().prepareModelForJsonMergePatch(" + propertyValueGetter + ", true);");
                 }
-                if (fromSuperType && clientType != wireType && clientType.isNullable()) {
-                    // If the property is from a super type and the client type is different from the wire type then a
-                    // null
-                    // check is required to prevent a NullPointerException when converting the value.
-                    methodBlock.ifBlock(property.getGetterName() + "() != null",
-                        ifAction -> ifAction.line(fieldSerializationMethod + ";"));
-                } else {
-                    methodBlock.line(fieldSerializationMethod + ";");
-                }
+                writeSerializeJsonPropertyViaFieldSerializationMethod(methodBlock, property, model, serializedName,
+                    fieldSerializationMethod, fromSuperType);
                 if (isJsonMergePatch && wireType instanceof ClassType && ((ClassType) wireType).isSwaggerType()) {
                     methodBlock.line("JsonMergePatchHelper.get" + clientType.toString()
                         + "Accessor().prepareModelForJsonMergePatch(" + propertyValueGetter + ", false);");
@@ -750,9 +747,39 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
                         .line("jsonWriter.writeUntypedField(\"" + serializedName + "\", " + propertyValueGetter + ");");
                 }
             } else if (wireType instanceof IterableType) {
-                serializeJsonContainerProperty(methodBlock, "writeArrayField", wireType,
-                    ((IterableType) wireType).getElementType(), serializedName, propertyValueGetter, 0,
-                    isJsonMergePatch);
+                if (property.getArrayEncoding() == null) {
+                    serializeJsonContainerProperty(methodBlock, "writeArrayField", wireType,
+                        ((IterableType) wireType).getElementType(), serializedName, propertyValueGetter, 0,
+                        isJsonMergePatch);
+                } else {
+                    IType wireElementType = ((IterableType) wireType).getElementType();
+                    if (wireElementType == ClassType.STRING) {
+                        // wireType is String
+                        methodBlock.ifBlock(propertyValueGetter + " != null", ifBlock -> {
+                            String serializeExpression = propertyValueGetter
+                                + ".stream().map(element -> element == null ? \"\" : element).collect(Collectors.joining(\""
+                                + property.getArrayEncoding().getDelimiter() + "\"))";
+                            methodBlock.line("jsonWriter.writeStringField(\"%s\", %s);", serializedName,
+                                serializeExpression);
+                        });
+                    } else {
+                        // wireType need to be converted to String
+                        if (wireElementType instanceof ConvertToJsonTypeTrait) {
+                            String convertToJsonExpression
+                                = ((ConvertToJsonTypeTrait) wireElementType).convertToJsonType("element");
+                            methodBlock.ifBlock(propertyValueGetter + " != null", ifBlock -> {
+                                String serializeExpression = propertyValueGetter + ".stream().map(element -> "
+                                    + convertToJsonExpression + ").collect(Collectors.joining(\""
+                                    + property.getArrayEncoding().getDelimiter() + "\"))";
+                                methodBlock.line("jsonWriter.writeStringField(\"%s\", %s);", serializedName,
+                                    serializeExpression);
+                            });
+                        } else {
+                            throw new RuntimeException("Unable to convert type " + wireElementType
+                                + " to String for ArrayEncoding serialization.");
+                        }
+                    }
+                }
             } else if (wireType instanceof MapType) {
                 // Assumption is that the key type for the Map is a String. This may not always hold true and when that
                 // becomes reality this will need to be reworked to handle that case.
@@ -762,6 +789,32 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
                 // TODO (alzimmer): Resolve this as deserialization logic generation needs to handle all cases.
                 throw new RuntimeException(
                     "Unknown wire type " + wireType + " in serialization. Need to add support for it.");
+            }
+        }
+
+        /**
+         * Writes the serialization of a JSON property via the fieldSerializationMethod.
+         *
+         * @param methodBlock the code block.
+         * @param property the model property.
+         * @param model the model.
+         * @param serializedName the serialized name of the property.
+         * @param fieldSerializationMethod the method to call for serialization of the field.
+         * @param fromSuperType whether the property is defined in super type.
+         */
+        protected void writeSerializeJsonPropertyViaFieldSerializationMethod(JavaBlock methodBlock,
+            ClientModelProperty property, ClientModel model, String serializedName, String fieldSerializationMethod,
+            boolean fromSuperType) {
+
+            IType clientType = property.getClientType();
+            IType wireType = property.getWireType();
+            if (fromSuperType && clientType != wireType && clientType.isNullable()) {
+                // If the property is from a super type and the client type is different from the wire type then a
+                // null check is required to prevent a NullPointerException when converting the value.
+                methodBlock.ifBlock(property.getGetterName() + "() != null",
+                    ifAction -> ifAction.line(fieldSerializationMethod + ";"));
+            } else {
+                methodBlock.line(fieldSerializationMethod + ";");
             }
         }
 
@@ -824,7 +877,11 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
             }
 
             methodBlock.indent(() -> {
-                if (valueSerializationMethod != null) {
+                if (elementType == ClassType.BINARY_DATA) {
+                    // Special handling for BinaryData
+                    methodBlock.line("{ if (%1$s == null) { %2$s.writeNull(); } else { %1$s.writeTo(%2$s); } }",
+                        elementName, lambdaWriterName);
+                } else if (valueSerializationMethod != null) {
                     if (isJsonMergePatch && containerType instanceof MapType) {
                         methodBlock.block("", codeBlock -> codeBlock.ifBlock(elementName + "!= null", ifBlock -> {
                             if (elementType instanceof ClassType && ((ClassType) elementType).isSwaggerType()) {
@@ -853,8 +910,6 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
                     serializeJsonContainerProperty(methodBlock, "writeMap", elementType,
                         ((MapType) elementType).getValueType(), serializedName, propertyValueGetter, depth + 1,
                         isJsonMergePatch);
-                } else if (elementType == ClassType.BINARY_DATA) {
-                    methodBlock.line(elementName + ".writeTo(" + lambdaWriterName + ")");
                 } else {
                     throw new RuntimeException("Unknown value type " + elementType + " in " + containerType
                         + " serialization. Need to add support for it.");
@@ -901,7 +956,7 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
             }
         }
 
-        private static void handleFlattenedPropertiesSerializationHelper(JavaBlock methodBlock,
+        private void handleFlattenedPropertiesSerializationHelper(JavaBlock methodBlock,
             JsonFlattenedPropertiesTree flattenedProperties, boolean isJsonMergePatch,
             boolean callToJsonSharedForParentProperties) {
             ClientModelPropertyWithMetadata flattenedProperty = flattenedProperties.getProperty();
@@ -1128,7 +1183,7 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
                     = (property, fromSuper) -> handleJsonPropertyDeserialization(property, whileBlock, ifBlockReference,
                         fromSuper, false);
 
-                Map<String, ClientModelProperty> modelPropertyMap = new HashMap<>();
+                Map<String, ClientModelProperty> modelPropertyMap = new LinkedHashMap<>();
                 for (ClientModelProperty parentProperty : ClientModelUtil.getParentProperties(model)) {
                     modelPropertyMap.put(parentProperty.getName(), parentProperty);
                 }
@@ -1569,13 +1624,51 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
                     deserializationBlock.line(property.getName() + " = reader.readUntyped();");
                 }
             } else if (wireType instanceof IterableType) {
+                IType wireElementType = ((IterableType) wireType).getElementType();
+
                 if (!propertiesManager.hasConstructorArguments()) {
                     deserializationBlock.text(property.getClientType() + " ");
                 }
 
                 deserializationBlock.text(property.getName() + " = ");
-                deserializeJsonContainerProperty(deserializationBlock, "readArray", wireType,
-                    ((IterableType) wireType).getElementType(), ((IterableType) clientType).getElementType(), 0);
+                if (property.getArrayEncoding() == null) {
+                    deserializeJsonContainerProperty(deserializationBlock, "readArray", wireType, wireElementType,
+                        ((IterableType) clientType).getElementType(), 0);
+                } else {
+                    final String propertyStringVariableName = property.getName() + "EncodedAsString";
+                    // LinkedList is used to be consistent with internal code of core, e.g. "readArray" API
+                    if (wireElementType == ClassType.STRING) {
+                        // wireType is String
+                        deserializationBlock.line("reader.getNullable(nonNullReader -> {");
+                        deserializationBlock.indent(() -> {
+                            deserializationBlock.line("String %1$s = nonNullReader.getString();",
+                                propertyStringVariableName);
+                            deserializationBlock.line(
+                                "return %1$s.isEmpty() ? new LinkedList<>() : new LinkedList<>(Arrays.asList(%1$s.split(\"%2$s\", -1)));",
+                                propertyStringVariableName, property.getArrayEncoding().getEscapedDelimiter());
+                        });
+                        deserializationBlock.line("});");
+                    } else {
+                        // wireType need to be converted from String
+                        if (wireElementType instanceof ConvertFromJsonTypeTrait) {
+                            String conversionExpress
+                                = ((ConvertFromJsonTypeTrait) wireElementType).convertFromJsonType("valueAsString");
+                            deserializationBlock.line("reader.getNullable(nonNullReader -> {");
+                            deserializationBlock.indent(() -> {
+                                deserializationBlock.line("String %1$s = nonNullReader.getString();",
+                                    propertyStringVariableName);
+                                deserializationBlock.line(
+                                    "return %1$s.isEmpty() ? new LinkedList<>() : new LinkedList<>(Arrays.stream(%1$s.split(\"%2$s\", -1)).map(valueAsString -> %3$s).collect(Collectors.toList()));",
+                                    propertyStringVariableName, property.getArrayEncoding().getEscapedDelimiter(),
+                                    conversionExpress);
+                            });
+                            deserializationBlock.line("});");
+                        } else {
+                            throw new RuntimeException("Unable to convert type " + wireElementType
+                                + " from String for ArrayEncoding serialization.");
+                        }
+                    }
+                }
 
                 if (!propertiesManager.hasConstructorArguments()) {
                     handleSettingDeserializedValue(deserializationBlock, property, property.getName(), fromSuper);
@@ -2413,16 +2506,50 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
         private void generateXmlDeserializationLogic(JavaBlock deserializationBlock, ClientModelProperty property,
             boolean fromSuper) {
             IType wireType = property.getWireType();
+            IType clientType = property.getClientType();
 
             // Attempt to determine whether the wire type is simple deserialization.
             // This is primitives, boxed primitives, a small set of string based models, and other ClientModels.
             String simpleDeserialization
                 = getSimpleXmlDeserialization(wireType, property.getXmlName(), null, null, false);
             if (simpleDeserialization != null) {
-                if (propertiesManager.hasConstructorArguments()) {
-                    deserializationBlock.line(property.getName() + " = " + simpleDeserialization + ";");
+                boolean convertToClientType = (clientType != wireType)
+                    && (includePropertyInConstructor(property, settings)
+                        || (fromSuper && !ClientModelUtil.readOnlyNotInCtor(model, property, settings)));
+                BiConsumer<String, JavaBlock> simpleDeserializationConsumer = (logic, block) -> {
+                    if (!propertiesManager.hasConstructorArguments()) {
+                        handleSettingDeserializedValue(deserializationBlock, property, logic, fromSuper);
+                    } else {
+                        deserializationBlock.line(property.getName() + " = " + logic + ";");
+                    }
+                };
+
+                if (convertToClientType) {
+                    // If the wire type is nullable don't attempt to call the convert to client type until it's known
+                    // that
+                    // a value was deserialized. This protects against cases such as UnixTimeLong where the wire type is
+                    // Long and the client type of OffsetDateTime. This is converted using Instant.ofEpochMilli(long)
+                    // which
+                    // would result in a null if the Long is null, which is already guarded using
+                    // reader.readNullable(nonNullReader -> Instant.ofEpochMillis(nonNullReader.readLong())) but this
+                    // itself
+                    // returns null which would have been passed to OffsetDateTime.ofInstant(Instant, ZoneId) which
+                    // would
+                    // have thrown a NullPointerException.
+                    if (wireType.isNullable()) {
+                        // Check if the property is required, if so use a holder name as there will be an existing
+                        // holder
+                        // variable for the value that will be used in the constructor.
+                        String holderName = property.getName() + "Holder";
+                        deserializationBlock.line(wireType + " " + holderName + " = " + simpleDeserialization + ";");
+                        deserializationBlock.ifBlock(holderName + " != null", ifBlock -> simpleDeserializationConsumer
+                            .accept(wireType.convertToClientType(holderName), ifBlock));
+                    } else {
+                        simpleDeserializationConsumer.accept(wireType.convertToClientType(simpleDeserialization),
+                            deserializationBlock);
+                    }
                 } else {
-                    handleSettingDeserializedValue(deserializationBlock, property, simpleDeserialization, fromSuper);
+                    simpleDeserializationConsumer.accept(simpleDeserialization, deserializationBlock);
                 }
             } else if (wireType instanceof IterableType) {
                 IType elementType = ((IterableType) wireType).getElementType();
@@ -2541,7 +2668,7 @@ public class StreamSerializationModelTemplate extends ModelTemplate {
             getClientModelPropertiesInJsonTree(JsonFlattenedPropertiesTree tree) {
             if (tree.getProperty() != null) {
                 // Terminal node only contains a property.
-                return Collections.singletonList(tree.getProperty());
+                return List.of(tree.getProperty());
             } else {
                 List<ClientModelPropertyWithMetadata> treeProperties = new ArrayList<>();
                 for (JsonFlattenedPropertiesTree childNode : tree.getChildrenNodes().values()) {
